# FormHelper

./: .gitignore  FormHelper项目规划.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
plan/init/: 00-用户总体计划.md  01-Agent1-基础架构.md  02-Agent2-前端文件处理.md  03-Agent3-后端OCR集成.md  04-Agent4-表格识别与数据管理.md
progress/: README.md  progress.bat  progress.json  progress_manager.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: export.rs  file.rs  mod.rs  person.rs  process.rs  record.rs
src-tauri/src/db/: mod.rs
src-tauri/src/ocr/: excel.rs  mod.rs  ocr.rs  pdf.rs  word.rs
src/components/: TableEditor.vue
src/locales/: en-US.json  zh-CN.json
src/router/: index.ts
src/stores/: fileStore.ts  index.ts  personStore.ts
src/views/: DataView.vue  FilesView.vue  HomeView.vue  PersonsView.vue  SettingsView.vue
