[package]
name = "form-helper"
version = "0.1.0"
description = "表格识别工具"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

# OCR（需要系统安装 tesseract）
tesseract = "0.3"
leptonica-sys = "0.4"

# PDF 解析
lopdf = "0.34"

# Word 解析
docx-rs = "0.4"

# Excel 解析
calamine = "0.20"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
